--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^2.1.1",
     "@prisma/client": "^5.6.0",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
@@ -31,11 +33,13 @@
     "next-i18next": "^15.2.0",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "18.2.0",
     "react-toastify": "^10.0.1",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
+    "tailwindcss-animated": "^1.0.1",
     "word-exists": "^1.0.0",
     "zod": "^3.22.4"
   },
