--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "wordle-game",
   "version": "0.1.0",
   "private": true,
-  "type": "module",
   "scripts": {
     "build": "next build",
     "db:push": "prisma db push",
@@ -15,27 +14,23 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
-    "@prisma/client": "^5.6.0",
+    "@lottiefiles/react-lottie-player": "^3.5.3",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
     "@t3-oss/env-nextjs": "^0.7.1",
     "@tanstack/react-query": "^4.36.1",
-    "@trpc/client": "^10.43.6",
-    "@trpc/next": "^10.43.6",
-    "@trpc/react-query": "^10.43.6",
     "@trpc/server": "^10.43.6",
-    "axios": "^1.6.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "is-word": "^1.0.4",
     "lucide-react": "^0.311.0",
     "next": "13.5.3",
-    "next-i18next": "^15.2.0",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-confetti": "^6.1.0",
     "react-dom": "18.2.0",
-    "react-toastify": "^10.0.1",
+    "react-lottie-player": "^1.5.6",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
@@ -56,7 +51,6 @@
     "postcss": "^8.4.31",
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.7",
-    "prisma": "^5.6.0",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.1.6"
   },
